# sigil

./: .gitattributes  .gitignore  CALL_RESOLVER_ROADMAP.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  WORKSPACE_INDEXING_PLAN.md  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
.sigil/: cache.json  rank.json  refs.jsonl
evals/: README.md  corpus.tsv  cross_repo_semantic_eval.py  semantic_eval.py
evals/results/: semantic-baseline-2026-05-18.json  semantic-cross-repo-2026-05-18.json  semantic-cross-repo-fuse-2026-05-18.json  semantic-cross-repo-persist-2026-05-18.json  semantic-cross-repo-rerank-2026-05-18.json  semantic-spike1-docmask-2026-05-18.json  semantic-spike2-m2v-2026-05-18.json  semantic-vs-semble-2026-05-18.json
evals/results/2026-04-22/haiku-4-5-baseline-0.4.0/E4/: E4_001_control_1.json  E4_001_treatment_1.json  E4_002_control_1.json  E4_002_treatment_1.json
evals/results/2026-04-22/haiku-4-5-pre-sgrep/E4/: E4_002_treatment_1.json  E4_003_control_1.json  E4_003_treatment_1.json  E4_004_control_1.json  E4_004_treatment_1.json
evals/results/2026-04-22/haiku-4-5-sgrep-fat-blurb/E4/: E4_001_treatment_1.json  E4_002_treatment_1.json  E4_003_treatment_1.json  E4_004_treatment_1.json
evals/results/2026-04-22/haiku-4-5-sgrep-tight-noexample/E4/: E4_001_treatment_1.json  E4_002_treatment_1.json  E4_003_treatment_1.json  E4_004_treatment_1.json
evals/results/2026-04-22/haiku-4-5/E4/: E4_001_control_1.json  E4_001_treatment_1.json  E4_002_control_1.json  E4_003_control_1.json  E4_004_control_1.json  summary.md
evals/results/2026-04-22/sonnet-4-6-baseline-0.4.0/E4/: E4_001_control_1.json  E4_001_control_2.json  E4_001_control_3.json  E4_001_treatment_1.json  E4_001_treatment_2.json  E4_001_treatment_3.json  E4_002_control_1.json  E4_002_control_2.json  E4_002_control_3.json  E4_002_treatment_1.json  E4_002_treatment_2.json  E4_002_treatment_3.json
evals/results/2026-04-22/sonnet-4-6-e4-34-pre-fix/E4/: E4_003_control_1.json  E4_003_control_2.json  E4_003_control_3.json  E4_003_treatment_1.json  E4_003_treatment_2.json  E4_003_treatment_3.json  E4_004_control_1.json  E4_004_control_2.json  E4_004_control_3.json  E4_004_treatment_1.json  E4_004_treatment_2.json  E4_004_treatment_3.json
evals/results/2026-04-22/sonnet-4-6-pre-sgrep/E4/: E4_001_treatment_1.json  E4_002_treatment_2.json  E4_002_treatment_3.json  E4_003_control_1.json  E4_003_control_2.json  E4_003_control_3.json  E4_003_treatment_1.json  E4_003_treatment_2.json  E4_003_treatment_3.json  E4_004_control_1.json  E4_004_control_2.json  E4_004_control_3.json  E4_004_treatment_1.json  E4_004_treatment_2.json  E4_004_treatment_3.json
evals/results/2026-04-22/sonnet-4-6-sgrep-fat-blurb/E4/: E4_001_treatment_1.json  E4_001_treatment_2.json  E4_001_treatment_3.json  E4_002_treatment_1.json  E4_002_treatment_2.json  E4_002_treatment_3.json  E4_003_treatment_1.json  E4_003_treatment_2.json  E4_003_treatment_3.json  E4_004_treatment_1.json  E4_004_treatment_2.json  E4_004_treatment_3.json
evals/results/2026-04-22/sonnet-4-6-sgrep-tight-noexample/E4/: E4_001_treatment_1.json  E4_001_treatment_2.json  E4_001_treatment_3.json  E4_002_treatment_1.json  E4_002_treatment_2.json  E4_002_treatment_3.json  E4_003_treatment_1.json  E4_003_treatment_2.json  E4_003_treatment_3.json  E4_004_treatment_1.json  E4_004_treatment_2.json  E4_004_treatment_3.json
evals/results/2026-04-22/sonnet-4-6/E4/: E4_001_control_1.json  E4_001_control_2.json  E4_001_control_3.json  E4_001_treatment_2.json  E4_001_treatment_3.json  E4_002_control_1.json  E4_002_control_2.json  (+9 more)
evals/runner/: run-e4-click-spike.sh  run.py
evals/tasks/E4_swebench_like/: 003-django-filefield-to-python.yaml  004-django-migrations-operations-outline.yaml
python/: Cargo.toml  README.md  pyproject.toml
scripts/: bootstrap-npm-stubs.mjs  publish-npm.mjs
skills/sigil/: SKILL.md
src/: blast.rs  bus_factor.rs  classifier.rs  communities.rs  community.rs  context.rs  contracts.rs  cross_repo_cochange.rs  dead_code.rs  decisions.rs  duplicates.rs  entity.rs  grep_cmd.rs  heritage.rs  hotspots.rs  identifiers.rs  index.rs  json_index.rs  lib.rs  log_significant.rs  main.rs  map.rs  markdown_index.rs  matcher.rs  meta.rs  outline.rs  output.rs  ownership.rs  package_deps.rs  rank.rs  review.rs  security_scan.rs  signature.rs  toml_index.rs  where_cmd.rs  workspace.rs  writer.rs  yaml_index.rs
src/install/: mod.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/parser/: c_lang.rs  cpp.rs  csharp.rs  format.rs  go.rs  helpers.rs  java.rs  javascript.rs  kotlin.rs  languages.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  scala.rs  sfc.rs  swift.rs  treesitter.rs  typescript.rs
src/query/: duckdb_backend.rs  index.rs  mod.rs
src/semantic/: bm25.rs  cmd.rs  download.rs  m2v.rs  m2v_index.rs  mod.rs  rerank.rs  rrf.rs  tokenize.rs
tests/: bus_factor_integration.rs  communities_integration.rs  contracts_integration.rs  cross_repo_cochange_integration.rs  dead_code_framework_aware.rs  decisions_integration.rs  heritage_integration.rs  hotspots_integration.rs  identifiers_integration.rs  integration.rs  log_significant_integration.rs  ownership_integration.rs  package_deps_integration.rs  parse_kotlin_integration.rs  parse_php_integration.rs  parse_scala_integration.rs  parse_swift_integration.rs  security_scan_integration.rs  semantic_integration.rs  semantic_m2v_integration.rs  tier3_resolver_integration.rs  workspace_integration.rs
tests/fixtures/: sample_cpp_heritage.cpp  sample_csharp_heritage.cs  sample_heritage.go  sample_java_heritage.java  sample_js_heritage.js  sample_kotlin_heritage.kt  sample_php_heritage.php  sample_py_heritage.py  sample_rust_heritage.rs  sample_scala_heritage.scala  sample_swift_heritage.swift  sample_ts_heritage.ts  semantic_doc_mask.rs  semantic_sample.rs
tests/fixtures/.sigil/: entities.jsonl  rank.json  refs.jsonl
tests/fixtures/kotlin/: sample.kt
tests/fixtures/php/: sample.php
tests/fixtures/scala/: sample.scala
tests/fixtures/swift/: sample.swift
