[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sigil-diff"
dynamic = ["version"]
description = "Structural code fingerprinting and diffing — Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["diff", "code", "structural", "json", "tree-sitter", "ast"]
authors = [
    { name = "Gaurav Verma", email = "gaurav@suprsend.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control",
    "Topic :: Text Processing :: General",
]

[project.urls]
Homepage = "https://github.com/knova-run/sigil"
Repository = "https://github.com/knova-run/sigil"
Issues = "https://github.com/knova-run/sigil/issues"

[tool.maturin]
module-name = "sigil"
